# ec486a

./: README.md
hw1/: Makefile  main.cpp
hw2/: Makefile  loop1.cpp  loop2.c  loop3.c  loop3.cpp
hw2/tools/: CMakeLists.txt  Loops.cpp
hw3/: Makefile  switch.c
lab0/: hello.cpp
lab1/: Makefile  classes  classes.cpp  expr.cpp  expr.hpp  interpreter.cpp  iterators  iterators.cpp  max.fre  sum.fre  template  templates.cpp  vector.cpp
lab1/fluidanimate/: Makefile  run.sh
lab1/streamcluster/: Makefile  run.sh
lab2/: CMakeLists.txt  ECPerf.cpp  academicplanner.apl  error.fre  expr.hpp  file1.txt  prodofsum.fre
lab2/cpp/: Makefile  lexer  lexer.cpp
lab2/python/: lexer.py
lab3/: ECPerf.cpp  Fixer.cpp  strings.cpp  test.fn
lab3-alternate/: Makefile  false.cpp
lab3/cpp/: Makefile  parser  parser.cpp
lab3/python/: parser.py
lab3/tests/: Makefile  test1.cpp
lab4/: CMakeLists.txt  Uninit.cpp  strings.cpp
lab5/: CMakeLists.txt  Fixer.cpp  Lab.cpp  hook.cpp  virtual.cpp
lab6/: Lab.cpp
lab6/astar/: Makefile  run.sh
lab6/bzip2/: Makefile  run.sh
lab6/llvm/lib/Transforms/Lab/: CMakeLists.txt  Lab.cpp
lab6/tests/: Makefile  three.c
lab7/Lab/: Lab.cpp
lab7/tests/: Makefile  one.c  two.c
lecture_code/: classes_and_virtual.cpp
lecture_code/static_analysis/: style_checking.cpp  uninitialized1.c  uninitialized2.c  uninitialized3.c  uninitialized4.cpp
lecture_code/traverse/: CMakeLists.txt  Traverse.cpp
